@@ -357,7 +357,7 @@ To add a missing function, read: doc/How_to_add_a_missing_function.md
 * JIS -- Changes half-width (single-byte) English letters or katakana within a character string to full-width (double-byte) characters
 * LEFT, LEFTB -- Returns the leftmost characters from a text value -- _R_ _C_ (not LEFTB)
 * LEN, LENB -- Returns the number of characters in a text string -- _R_ (not LENB)
-* LOWER -- Converts text to lowercase
+* LOWER -- Converts text to lowercase - _R_
 * MID, MIDB -- Returns a specific number of characters from a text string starting at the position you specify - _R_
 * PHONETIC -- Extracts the phonetic (furigana) characters from a text string
 * PROPER -- Capitalizes the first letter in each word of a text value
